[package]
name = "disk-types-aosc"
version = "0.2.0"
authors = ["Jeremy Soller <jackpot51@gmail.com>", "Michael Aaron Murphy <mmstickman@gmail.com>"]
description = "Common traits and types for handling block devices, partitions, file systems, etc. (Fork from pop-os/disk-types)"
repository = "https://github.com/aosc-dev/disk-types"
readme = "README.md"
license = "MIT"
keywords =  ["disk", "partition"]
categories = ["filesystem", "os"]
edition = "2024"

[dependencies]
sys-mount = "3"
tempfile = "3.19.1"
os-detect = { version = "0.2", package = "os-detect-aosc" }
sysfs-class = "0.1.2"
libparted = "0.1.4"
thiserror = "2"
